Fix vertical text alignment to the top

--- a/styles.css
+++ b/styles.css
@@ -56,4 +56,5 @@ p{
     margin-left: 130px;
     margin-top: 50px;
     text-align: justify;
+    vertical-align: text-top;
 }
